[gd_scene load_steps=2 format=3 uid="uid://sugg2fid7v5j"]

[ext_resource type="Script" path="res://ui/main-menu/main_menu.gd" id="1_l11jg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_l11jg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -33.0
offset_right = 60.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameSettings" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Game Settings"

[node name="ExitGame" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit Game"

[node name="ExitConfirmationDialog" type="ConfirmationDialog" parent="Panel/VBoxContainer/ExitGame"]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(320, 100)
dialog_text = "Are you sure you want to exit the game"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/GameSettings" to="." method="_on_game_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="canceled" from="Panel/VBoxContainer/ExitGame/ExitConfirmationDialog" to="." method="_on_exit_confirmation_dialog_canceled"]
[connection signal="confirmed" from="Panel/VBoxContainer/ExitGame/ExitConfirmationDialog" to="." method="_on_exit_confirmation_dialog_confirmed"]
